[project]
name = "focusbeacon-api"
version = "0.2.0"
description = "FastAPI backend for Focusbeacon"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pandas>=2.2.0",
    "numpy>=2.0.0",
    "pydantic>=2.8.0",
    "supabase>=2.6.0",
    "python-dotenv>=1.0.0",
    "cryptography>=44.0.0",
    "httpx>=0.27.0",
    "cachetools>=5.4.0",
    "aiohttp>=3.11.0",
]
